updated routerView to fix breaking of about page on smaller screens (#7012)
* updated routerView to fix breaking of about page on smaller screens

* Update App.css

* Update App.css

the change wasnt needed so reverted

* changes overflow to hidden and wrap to anywhere

The previous changes were redundant, this commit fixes the breaking of page

* overflow hidden was not needed so removed

--- a/src/renderer/views/About/About.css
+++ b/src/renderer/views/About/About.css
@@ -39,6 +39,7 @@
   margin: 0;
   padding: 18px;
   word-wrap: break-word;
+  overflow-wrap: anywhere;
 }
 
 .icon {
